# Meta-hackathon

./: Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt  server.py
email_triage_env/: Dockerfile  README.md  __init__.py  baseline.py  environment.py  models.py  openenv.yaml  requirements.txt  reward.py  tasks.py
email_triage_env/data/: emails.py
server/: app.py
